@@ -1,17 +1,17 @@
-debian/tmp/usr/bin/enlightenment
-debian/tmp/usr/bin/enlightenment_open
-debian/tmp/usr/bin/enlightenment_filemanager
-debian/tmp/usr/bin/enlightenment_remote
-debian/tmp/usr/bin/enlightenment_start
-debian/tmp/usr/bin/enlightenment_imc
-debian/tmp/usr/lib/enlightenment/utils/enlightenment_*
-debian/tmp/etc/enlightenment/sysactions.conf
-debian/tmp/usr/lib/enlightenment/modules/*/*/module.so
-debian/tmp/usr/lib/enlightenment/modules/*/module.desktop
-debian/tmp/usr/lib/enlightenment/modules/*/e-module-*.edj
-debian/tmp/usr/lib/enlightenment/modules/battery/*/batget
-debian/tmp/usr/lib/enlightenment/modules/cpufreq/*/freqset
-debian/tmp/usr/lib/enlightenment/modules/temperature/*/tempget
-debian/tmp/usr/lib/enlightenment/modules/wizard/*/page*.so
-debian/tmp/usr/lib/enlightenment/modules/wizard/def-ibar.txt
-debian/tmp/usr/lib/enlightenment/modules/wizard/desktop
+etc/enlightenment/sysactions.conf
+usr/bin/enlightenment
+usr/bin/enlightenment_filemanager
+usr/bin/enlightenment_imc
+usr/bin/enlightenment_open
+usr/bin/enlightenment_remote
+usr/bin/enlightenment_start
+usr/lib/*/enlightenment/modules/battery/*/batget
+usr/lib/*/enlightenment/modules/cpufreq/*/freqset
+usr/lib/*/enlightenment/modules/*/e-module-*.edj
+usr/lib/*/enlightenment/modules/*/module.desktop
+usr/lib/*/enlightenment/modules/*/*/module.so
+usr/lib/*/enlightenment/modules/temperature/*/tempget
+usr/lib/*/enlightenment/modules/wizard/def-ibar.txt
+usr/lib/*/enlightenment/modules/wizard/desktop
+usr/lib/*/enlightenment/modules/wizard/*/page*.so
+usr/lib/*/enlightenment/utils/enlightenment_*
